# petompp-web

api/: Cargo.toml
api/src/: app.rs  auth.rs  lib.rs  main.rs
api/src/auth/: claim.rs  error.rs  mod.rs  validation.rs
api/src/controllers/: users.rs
api/src/data_sources/: azure.rs  data_source.rs  memory.rs  mod.rs
api/src/endpoints/: endpoint.rs  mod.rs  user.rs
api/src/extensions/: extension.rs
api/src/models/: user.rs
api/tests/: mod.rs  test_db_pool.rs
api/tests/controllers/: users_test.rs
api/tests/endpoints/: mod.rs  user_tests.rs
front/locales/: en.yml
front/src/: router.rs
front/src/components/organisms/: blog_post.rs  header.rs  menu.rs  mod.rs
front/src/models/: blog.rs  mod.rs
front/src/pages/: mod.rs
front/src/pages/blog/: blog.rs
workflows/: release.yml
