[package]
name = "petompp-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-httpauth = "0.8"
actix-rt = "2.8"
actix-web = "4.3"
chrono = "0.4"
enum-iterator = "1.4"
env_logger = "0.10"
hmac = "0.12"
jwt = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
urandom = "0.1"